--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,12 @@ repos:
     - id: ruff
       args: [ --fix ]
 
+
+- repo: https://github.com/pycqa/isort
+  rev: 6.0.1
+  hooks:
+    - id: isort
+
 - repo: https://github.com/RobertCraigie/pyright-python
   rev: v1.1.396
   hooks:
@@ -33,3 +39,13 @@ repos:
   rev: v0.12.0
   hooks:
     - id: markdownlint
+
+- repo: local
+  hooks:
+  - id: pytest
+    name: pytest
+    entry: ./.venv/bin/pytest src
+    language: system
+    types: [python]
+    pass_filenames: false
+    always_run: true
